Adicionando alterações da pratica 6 - parte 1